--- a/pet/docker-compose.yaml
+++ b/pet/docker-compose.yaml
@@ -1,19 +1,19 @@
 version: '3.8'
 
 services:
-  application:
-    image: events-image:latest
-    container_name: project_backend
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://events_db:5432/events_db
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
-    ports:
-      - '8080:8080'
-    networks:
-      - app_network
-    depends_on:
-      - events_db
+#  application:
+#    image: events-image:latest
+#    container_name: project_backend
+#    environment:
+#      - SPRING_DATASOURCE_URL=jdbc:postgresql://events_db:5432/events_db
+#      - SPRING_DATASOURCE_USERNAME=postgres
+#      - SPRING_DATASOURCE_PASSWORD=postgres
+#    ports:
+#      - '8080:8080'
+#    networks:
+#      - app_network
+#    depends_on:
+#      - events_db
 
   events_db:
     image: 'postgres:15'
